v1.0.0/modules/schema/pages/class/ProductAssetModel.adoc
= `ProductAssetModel`
:toclevels: 4


+++Asset model by a specific manufacturer.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ProductAssetModel`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`ProductAssetModel`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
ProductAssetModel {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}







CatalogAssetType {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



AssetModelCatalogueItem {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Manufacturer {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



AssetInfo {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Asset {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



OperationalRestriction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}






ProductAssetModel -> CatalogAssetType: CatalogAssetType


ProductAssetModel -> AssetModelCatalogueItem: AssetModelCatalogueItems


ProductAssetModel -> Manufacturer: Manufacturer


ProductAssetModel -> AssetInfo: AssetInfo


ProductAssetModel -> Asset: Asset


ProductAssetModel -> OperationalRestriction: OperationalRestrictions


ProductAssetModel -> DiagramObject: DiagramObjects


ProductAssetModel -> InstanceSet: InstanceSet


ProductAssetModel -> Name: Names


ProductAssetModel -> ChangeSetMember: PropertiesCIMDataObject


ProductAssetModel -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<AssetInfo,`AssetInfo`>>
| 0..1
| xref::class/AssetInfo.adoc[`AssetInfo`]
| +++Asset information (nameplate) for this product asset model.+++

| <<CatalogAssetType,`CatalogAssetType`>>
| 0..1
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]
| +++Catalog asset type to which this product asset model conforms.+++

| <<Manufacturer,`Manufacturer`>>
| 0..1
| xref::class/Manufacturer.adoc[`Manufacturer`]
| +++Manufacturer of this asset model.+++

| <<catalogueNumber,`catalogueNumber`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Catalogue number for asset model.+++

| <<corporateStandardKind,`corporateStandardKind`>>
| 0..1
| xref::enumeration/CorporateStandardKind.adoc[`CorporateStandardKind`]
| +++Kind of corporate standard for this asset model.+++

| <<drawingNumber,`drawingNumber`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Drawing number for asset model.+++

| <<instructionManual,`instructionManual`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Reference manual or instruction book for this asset model.+++

| <<modelNumber,`modelNumber`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Manufacturer's model number.+++

| <<modelVersion,`modelVersion`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Version number for product model, which indicates vintage of the product.+++

| <<overallLength,`overallLength`>>
| 0..1
| xref::class/Length.adoc[`Length`]
| +++Overall length of this asset model.+++

| <<styleNumber,`styleNumber`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Style number of asset model.+++

| <<usageKind,`usageKind`>>
| 0..1
| xref::enumeration/AssetModelUsageKind.adoc[`AssetModelUsageKind`]
| +++Intended usage for this asset model.+++

| <<weightTotal,`weightTotal`>>
| 0..1
| xref::class/Mass.adoc[`Mass`]
| +++Total manufactured weight of asset.+++

| <<Asset,`Asset`>>
| 0..*
| xref::class/Asset.adoc[`Asset`]
| +++An asset of this model.+++

| <<AssetModelCatalogueItems,`AssetModelCatalogueItems`>>
| 0..*
| xref::class/AssetModelCatalogueItem.adoc[`AssetModelCatalogueItem`]
| n/a

| <<OperationalRestrictions,`OperationalRestrictions`>>
| 0..*
| xref::class/OperationalRestriction.adoc[`OperationalRestriction`]
| +++All operational restrictions applying to this asset model.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Asset]
=== `Asset`
+++An asset of this model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.Asset`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#AssetInfo]
=== `AssetInfo`
+++Asset information (nameplate) for this product asset model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.AssetInfo`
| Cardinality
| 0..1
| Type
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

//[discrete]
[#AssetModelCatalogueItems]
=== `AssetModelCatalogueItems`


[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.AssetModelCatalogueItems`
| Cardinality
| 0..*
| Type
| xref::class/AssetModelCatalogueItem.adoc[`AssetModelCatalogueItem`]


|===

//[discrete]
[#CatalogAssetType]
=== `CatalogAssetType`
+++Catalog asset type to which this product asset model conforms.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.CatalogAssetType`
| Cardinality
| 0..1
| Type
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]


|===

//[discrete]
[#catalogueNumber]
=== `catalogueNumber`
+++Catalogue number for asset model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.catalogueNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#corporateStandardKind]
=== `corporateStandardKind`
+++Kind of corporate standard for this asset model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.corporateStandardKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/CorporateStandardKind.adoc[`CorporateStandardKind`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#drawingNumber]
=== `drawingNumber`
+++Drawing number for asset model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.drawingNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#instructionManual]
=== `instructionManual`
+++Reference manual or instruction book for this asset model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.instructionManual`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#Manufacturer]
=== `Manufacturer`
+++Manufacturer of this asset model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.Manufacturer`
| Cardinality
| 0..1
| Type
| xref::class/Manufacturer.adoc[`Manufacturer`]


|===

//[discrete]
[#modelNumber]
=== `modelNumber`
+++Manufacturer's model number.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.modelNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#modelVersion]
=== `modelVersion`
+++Version number for product model, which indicates vintage of the product.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.modelVersion`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#OperationalRestrictions]
=== `OperationalRestrictions`
+++All operational restrictions applying to this asset model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.OperationalRestrictions`
| Cardinality
| 0..*
| Type
| xref::class/OperationalRestriction.adoc[`OperationalRestriction`]


|===

//[discrete]
[#overallLength]
=== `overallLength`
+++Overall length of this asset model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.overallLength`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#styleNumber]
=== `styleNumber`
+++Style number of asset model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.styleNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#usageKind]
=== `usageKind`
+++Intended usage for this asset model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.usageKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/AssetModelUsageKind.adoc[`AssetModelUsageKind`]


|===

//[discrete]
[#weightTotal]
=== `weightTotal`
+++Total manufactured weight of asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.weightTotal`
| Cardinality
| 0..1
| Type
| xref::class/Mass.adoc[`Mass`]


|===


