v1.1.0/modules/schema/pages/class/ProductAssetModel.adoc
= `ProductAssetModel`
:toclevels: 4


+++Asset model by a specific manufacturer.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ProductAssetModel`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`ProductAssetModel`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<Asset,`Asset`>>
//| [[slots_table.Asset]]<<Asset,`Asset`>>
| 0..* +
xref::class/Asset.adoc[`Asset`]
| +++An asset of this model.+++
| _n/a_

| <<AssetInfo,`AssetInfo`>>
//| [[slots_table.AssetInfo]]<<AssetInfo,`AssetInfo`>>
| 0..1 +
xref::class/AssetInfo.adoc[`AssetInfo`]
| +++Asset information (nameplate) for this product asset model.+++
| _n/a_

| <<AssetModelCatalogueItems,`AssetModelCatalogueItems`>>
//| [[slots_table.AssetModelCatalogueItems]]<<AssetModelCatalogueItems,`AssetModelCatalogueItems`>>
| 0..* +
xref::class/AssetModelCatalogueItem.adoc[`AssetModelCatalogueItem`]
| _n/a_
| _n/a_

| <<CatalogAssetType,`CatalogAssetType`>>
//| [[slots_table.CatalogAssetType]]<<CatalogAssetType,`CatalogAssetType`>>
| 0..1 +
xref::class/CatalogAssetType.adoc[`CatalogAssetType`]
| +++Catalog asset type to which this product asset model conforms.+++
| _n/a_

| <<Manufacturer,`Manufacturer`>>
//| [[slots_table.Manufacturer]]<<Manufacturer,`Manufacturer`>>
| 0..1 +
xref::class/Manufacturer.adoc[`Manufacturer`]
| +++Manufacturer of this asset model.+++
| _n/a_

| <<OperationalRestrictions,`OperationalRestrictions`>>
//| [[slots_table.OperationalRestrictions]]<<OperationalRestrictions,`OperationalRestrictions`>>
| 0..* +
xref::class/OperationalRestriction.adoc[`OperationalRestriction`]
| +++All operational restrictions applying to this asset model.+++
| _n/a_

| <<catalogueNumber,`catalogueNumber`>>
//| [[slots_table.catalogueNumber]]<<catalogueNumber,`catalogueNumber`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Catalogue number for asset model.+++
| _n/a_

| <<corporateStandardKind,`corporateStandardKind`>>
//| [[slots_table.corporateStandardKind]]<<corporateStandardKind,`corporateStandardKind`>>
| 0..1 +
xref::enumeration/CorporateStandardKind.adoc[`CorporateStandardKind`]
| +++Kind of corporate standard for this asset model.+++
| _n/a_

| <<drawingNumber,`drawingNumber`>>
//| [[slots_table.drawingNumber]]<<drawingNumber,`drawingNumber`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Drawing number for asset model.+++
| _n/a_

| <<instructionManual,`instructionManual`>>
//| [[slots_table.instructionManual]]<<instructionManual,`instructionManual`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Reference manual or instruction book for this asset model.+++
| _n/a_

| <<modelNumber,`modelNumber`>>
//| [[slots_table.modelNumber]]<<modelNumber,`modelNumber`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Manufacturer's model number.+++
| _n/a_

| <<modelVersion,`modelVersion`>>
//| [[slots_table.modelVersion]]<<modelVersion,`modelVersion`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Version number for product model, which indicates vintage of the product.+++
| _n/a_

| <<overallLength,`overallLength`>>
//| [[slots_table.overallLength]]<<overallLength,`overallLength`>>
| 0..1 +
xref::class/Length.adoc[`Length`]
| +++Overall length of this asset model.+++
| _n/a_

| <<styleNumber,`styleNumber`>>
//| [[slots_table.styleNumber]]<<styleNumber,`styleNumber`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Style number of asset model.+++
| _n/a_

| <<usageKind,`usageKind`>>
//| [[slots_table.usageKind]]<<usageKind,`usageKind`>>
| 0..1 +
xref::enumeration/AssetModelUsageKind.adoc[`AssetModelUsageKind`]
| +++Intended usage for this asset model.+++
| _n/a_

| <<weightTotal,`weightTotal`>>
//| [[slots_table.weightTotal]]<<weightTotal,`weightTotal`>>
| 0..1 +
xref::class/Mass.adoc[`Mass`]
| +++Total manufactured weight of asset.+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#Asset]
=== `Asset`
+++An asset of this model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.Asset`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.Asset,&#10548;>>
--
////


//[discrete]
[#AssetInfo]
=== `AssetInfo`
+++Asset information (nameplate) for this product asset model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.AssetInfo`
| Cardinality
| 0..1
| Type
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

////
[.text-left]
--
<<slots_table.AssetInfo,&#10548;>>
--
////


//[discrete]
[#AssetModelCatalogueItems]
=== `AssetModelCatalogueItems`



[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.AssetModelCatalogueItems`
| Cardinality
| 0..*
| Type
| xref::class/AssetModelCatalogueItem.adoc[`AssetModelCatalogueItem`]


|===

////
[.text-left]
--
<<slots_table.AssetModelCatalogueItems,&#10548;>>
--
////


//[discrete]
[#CatalogAssetType]
=== `CatalogAssetType`
+++Catalog asset type to which this product asset model conforms.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.CatalogAssetType`
| Cardinality
| 0..1
| Type
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]


|===

////
[.text-left]
--
<<slots_table.CatalogAssetType,&#10548;>>
--
////


//[discrete]
[#catalogueNumber]
=== `catalogueNumber`
+++Catalogue number for asset model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.catalogueNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.catalogueNumber,&#10548;>>
--
////


//[discrete]
[#corporateStandardKind]
=== `corporateStandardKind`
+++Kind of corporate standard for this asset model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.corporateStandardKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/CorporateStandardKind.adoc[`CorporateStandardKind`]


|===

////
[.text-left]
--
<<slots_table.corporateStandardKind,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#drawingNumber]
=== `drawingNumber`
+++Drawing number for asset model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.drawingNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.drawingNumber,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#instructionManual]
=== `instructionManual`
+++Reference manual or instruction book for this asset model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.instructionManual`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.instructionManual,&#10548;>>
--
////


//[discrete]
[#Manufacturer]
=== `Manufacturer`
+++Manufacturer of this asset model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.Manufacturer`
| Cardinality
| 0..1
| Type
| xref::class/Manufacturer.adoc[`Manufacturer`]


|===

////
[.text-left]
--
<<slots_table.Manufacturer,&#10548;>>
--
////


//[discrete]
[#modelNumber]
=== `modelNumber`
+++Manufacturer's model number.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.modelNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.modelNumber,&#10548;>>
--
////


//[discrete]
[#modelVersion]
=== `modelVersion`
+++Version number for product model, which indicates vintage of the product.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.modelVersion`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.modelVersion,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#OperationalRestrictions]
=== `OperationalRestrictions`
+++All operational restrictions applying to this asset model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.OperationalRestrictions`
| Cardinality
| 0..*
| Type
| xref::class/OperationalRestriction.adoc[`OperationalRestriction`]


|===

////
[.text-left]
--
<<slots_table.OperationalRestrictions,&#10548;>>
--
////


//[discrete]
[#overallLength]
=== `overallLength`
+++Overall length of this asset model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.overallLength`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]


|===

////
[.text-left]
--
<<slots_table.overallLength,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#styleNumber]
=== `styleNumber`
+++Style number of asset model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.styleNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.styleNumber,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#usageKind]
=== `usageKind`
+++Intended usage for this asset model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.usageKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/AssetModelUsageKind.adoc[`AssetModelUsageKind`]


|===

////
[.text-left]
--
<<slots_table.usageKind,&#10548;>>
--
////


//[discrete]
[#weightTotal]
=== `weightTotal`
+++Total manufactured weight of asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ProductAssetModel.weightTotal`
| Cardinality
| 0..1
| Type
| xref::class/Mass.adoc[`Mass`]


|===

////
[.text-left]
--
<<slots_table.weightTotal,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/Asset.adoc[`Asset`] | xref::class/Asset.adoc#ProductAssetModel[`ProductAssetModel`]



| xref::class/AssetInfo.adoc[`AssetInfo`] | xref::class/AssetInfo.adoc#ProductAssetModel[`ProductAssetModel`]



| xref::class/AssetModelCatalogueItem.adoc[`AssetModelCatalogueItem`] | xref::class/AssetModelCatalogueItem.adoc#AssetModel[`AssetModel`]



| xref::class/CatalogAssetType.adoc[`CatalogAssetType`] | xref::class/CatalogAssetType.adoc#ProductAssetModel[`ProductAssetModel`]



| xref::class/Manufacturer.adoc[`Manufacturer`] | xref::class/Manufacturer.adoc#ProductAssetModels[`ProductAssetModels`]



| xref::class/OperationalRestriction.adoc[`OperationalRestriction`] | xref::class/OperationalRestriction.adoc#ProductAssetModel[`ProductAssetModel`]


|===

